--- a/radixconfig.yaml
+++ b/radixconfig.yaml
@@ -7,6 +7,9 @@ spec:
     - name: dev
       build:
         from: master
+    - name: blobfuse
+      build:
+        from: blobfuse        
   components:
     - name: auth
       image: quay.io/pusher/oauth2_proxy:v4.1.0 # see https://pusher.github.io/oauth2_proxy/configuration
