--- a/radixconfig.yaml
+++ b/radixconfig.yaml
@@ -69,6 +69,14 @@ spec:
             limits:
               memory: "4G"
               cpu: "1000m"
+        - environment: blobfuse
+          resources:
+            requests:
+              memory: "400Mi"
+              cpu: "100m"
+            limits:
+              memory: "4G"
+              cpu: "1000m"              
   dnsAppAlias:
     environment: dev
     component: auth
